<resources>
    <string name="app_name">BiometricDemo</string>

    <!-- Number -->
    <string name="tCN_KeyBack">&lt;</string>
    <string name="tCN_KeyPoint">.</string>
    <string name="tCN_Key0">0</string>
    <string name="tCN_Key1">1</string>
    <string name="tCN_Key2">2</string>
    <string name="tCN_Key3">3</string>
    <string name="tCN_Key4">4</string>
    <string name="tCN_Key5">5</string>
    <string name="tCN_Key6">6</string>
    <string name="tCN_Key7">7</string>
    <string name="tCN_Key8">8</string>
    <string name="tCN_Key9">9</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
